samples/bookinfo/networking/destination-rule-all.yaml
# サブセットを定義しistioの機能を実現させる
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
# productpageのDestinationRuleを定義、v1のみにトラフィックを送る(bookinfo.ymlを見たらわかるがv1しかない)
spec:
  host: productpage # bookinfo.ymlのmetadata.name(productpage)と対応
  subsets:
  - name: v1 # サブセットを定義
    labels:
    # bookinfo.ymlのproductpageサービスで定義したv1Podのラベルを指定
      version: v1 
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews # bookinfo.ymlのmetadata.name(reviews)と対応
  subsets:
  # v1-v3までのサブセットを定義しbookinfo.ymlのreviewsサービスで定義したPodのラベルを指定
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: ratings
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v2-mysql
    labels:
      version: v2-mysql
  - name: v2-mysql-vm
    labels:
      version: v2-mysql-vm
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
