samples/bookinfo/networking/httpbin-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1 # TCPレベルでの同時接続の最大数を1に制限
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1 # 5xxエラーが発生したインスタンスは「異常」とistioが判断
      interval: 1s
      baseEjectionTime: 3m #　「異常」と検出されたインスタンスは少なくとも3分間はトラフィックを受け取らない
      maxEjectionPercent: 100
