samples/bookinfo/networking/reviews-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  # v1に4秒の固定遅延を注入
  - fault: 
      delay:
        fixedDelay: 4s
        percentage:
          value: 100.0
    route:
    - destination:
        host: reviews
        subset: v1
    # v1に対して2秒のタイムアウトを設定
    timeout: 2s
